--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -54,16 +54,22 @@ map:
     - id: 10sites
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
-      slug: idea
+      slug: site
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+
+    - id: dvsafestreets
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+      type: landmark
+      slug: site
+      sources:
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.24e0d2bg/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: gtopenspace2
       type: place
@@ -252,6 +258,7 @@ place_types:
           opacity: 0.7
           fillOpacity: '{{properties.fill-opacity}}'
           weight: "{{properties.stroke-width}}"
+  
 
   danger:
     zoomType: mapboxZoomStyle
@@ -312,7 +319,7 @@ place_types:
 
 
   low:
-    label: _(Low)
+    label: _(Low priority item)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -341,7 +348,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
   medium:
-    label: _(Medium)
+    label: _(Medium priority item)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -370,7 +377,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
   high:
-    label: _(High)
+    label: _(High priority item)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -461,6 +468,10 @@ sidebar:
               title: _(Priority Sites)
               visibleDefault: true
 
+            - id: dvsafestreets
+              title: _(Duwamish Valley Safe Streets)
+              visibleDefault: false
+
             - id: gtopenspace2
               title: _(Additional ideas)
               visibleDefault: false
@@ -475,7 +486,7 @@ sidebar:
 
             - id: restoration
               title: _(Restoration Sites)
-              visibleDefault: false
+              visibleDefault: true
 
         - id: grp-land
           title: _(Land Data)
@@ -546,7 +557,7 @@ activity:
 place:
   dataset_slug: report # default is 'place'
   adding_supported: true
-  add_button_label: _(Share an idea on the map!)
+  add_button_label: _(Add information to the map)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(Show list of ideas)
   show_map_button_label: _(Show the Map)
@@ -565,7 +576,7 @@ place:
     - category: high
       includeOnForm: true
       name: location_type
-      dataset: gtopenspace
+      dataset: gtopenspace2
       icon_url: /static/css/images/markers/marker-e1264d.png
       value: high
       label: _(High priority)
@@ -585,7 +596,7 @@ place:
     - category: medium
       includeOnForm: true
       name: location_type
-      dataset: gtopenspace
+      dataset: gtopenspace2
       icon_url: /static/css/images/markers/marker-f39914.png
       value: medium
       label: _(Medium priority)
@@ -605,7 +616,7 @@ place:
     - category: low
       includeOnForm: true
       name: location_type
-      dataset: gtopenspace
+      dataset: gtopenspace2
       icon_url: /static/css/images/markers/marker-a5cf32.png
       value: low
       label: _(Low priority)
@@ -626,7 +637,7 @@ place:
     - category: feature
       includeOnForm: false
       name: location_type
-      dataset: gtopenspace
+      dataset: gtopenspace2
       icon_url: /static/css/images/markers/marker-star.png
       value: feature
       label: _(Featured site)
@@ -782,27 +793,20 @@ pages:
 story:
   test_story1:
     default_visible_layers:
-      - gtopenspace
+      - 10sites
+      - restoration
     tagline: _(Explore other priority sites)
     order:
-      - url: idea/552
-      - url: idea/554
-      - url: idea/555
-      - url: idea/556
-      - url: idea/558
-      - url: idea/559
-      - url: idea/560
-      - url: idea/564
-      - url: idea/572
-      - url: idea/573
-      - url: idea/594
-      - url: idea/595
-      - url: idea/574
-      - url: idea/575
-      - url: idea/576
-      - url: idea/580
-      - url: idea/585
-      - url: idea/586
+      - url: sp-connection
+      - url: gateway-park
+      - url: dogpark
+      - url: airport-way
+      - url: michigan-corson-bailey
+      - url: s-michigan
+      - url: fifth-ave-festival
+      - url: river-st
+      - url: ellis
+      - url: corson
 
   test_story2:
     tagline: _(This is a priority site. Use arrows to explore others)
