--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   },
   "homepage": "https://github.com/smartercleanup/platform",
   "scripts": {
-    "postinstall": "./node_modules/grunt-cli/bin/grunt",
+    "build-scss": "node scripts/sass.js",
     "build-lib-js": "cat src/sa_web/static/dist/cat-lib-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/lib-bundle.js | gzip > src/sa_web/static/dist/lib-bundle.js.gz",
     "build-preload-js": "cat src/sa_web/static/dist/cat-preload-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/preload-bundle.js | gzip > src/sa_web/static/dist/preload-bundle.js.gz",
     "build-js": "cat src/sa_web/static/dist/cat-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/bundle.js | gzip > src/sa_web/static/dist/bundle.js.gz",
     "build-css":  "cat src/sa_web/static/dist/cat-bundle.css | tee src/sa_web/static/dist/bundle.css | gzip > src/sa_web/static/dist/bundle.css.gz",
-    "build": "node concat.js && npm run build-lib-js && npm run build-preload-js && npm run build-js && npm run build-css"
+    "build-concat": "node scripts/concat.js",
+    "build": "npm run build-scss && npm run build-concat && npm run build-lib-js && npm run build-preload-js && npm run build-js && npm run build-css"
   },
   "dependencies": {
+    "compass-importer": "^0.4.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
@@ -34,6 +36,7 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "node-env-file": "^0.1.7",
+    "node-sass": "^3.11.2",
     "sheetify": "^2.0.3",
     "shelljs": "^0.5.3",
     "uglifyjs": "^2.4.10"
