Prevent start page routing on devices below a defined pixel width
Default to a width of 960 pixels.

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1423,7 +1423,10 @@ pages:
   - title: _(About)
     slug: about
     name: overview
-    start_page: false
+    start_page: true
+    # only show the start page on devices with pixel widths 
+    # greater than this value
+    show_above_width: 960
 
   - title: _(Background)
     slug: background
