--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1607,6 +1607,9 @@ pages:
     slug: about
     name: overview
     start_page: true
+    # only show the start page on devices with pixel widths 
+    # greater than this value
+    show_above_width: 960
 
   - title: _(Background)
     slug: background
