--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1624,6 +1624,7 @@ pages:
   - title: _(Stories)
     slug: stories
     name: stories
+    hide_from_top_bar: true
 
   - title: _(Green Screen)
     slug: greenscreen
