--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # https://github.com/travis-ci/travis-ci/wiki/.travis.yml-options
-
+sudo: required
+dist: trusty
 python:
-  - "2.6"
   - "2.7"
 
 # This is redundant, but explicit,, since 'sudo' is disabled by default to
@@ -13,7 +13,7 @@ sudo: false
 # https://github.com/travis-ci/travis-ci/issues/3563
 before_script:
   - export PATH=$HOME/.local/bin:$PATH
-  - pip install -r requirements.txt --user `whoami`
+  - pip install -r app-requirements.txt
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 
@@ -23,7 +23,7 @@ script: "ci/script.sh"
 notifications:
   irc:
     channels:
-      - "irc.freenode.org#smartercleanup"
+      - "irc.freenode.org#heyduwamish"
     on_success: change
     on_failure: always
   email: false
