--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -89,7 +89,7 @@ map:
 # The values map the place type to map icons (defined below).
 place_types:
   youth:
-    label: _(Idea for youth services)
+    label: _(idea for youth services)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -119,7 +119,7 @@ place_types:
           iconAnchor: [15, 15]
 
   senior:
-    label: _(Idea for senior services)
+    label: _(idea for senior services)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -149,7 +149,7 @@ place_types:
           iconAnchor: [15, 15]
 
   parks:
-    label: _(Idea for parks and recreation)
+    label: _(idea for parks and recreation)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -179,7 +179,7 @@ place_types:
           iconAnchor: [15, 15]
 
   streets:
-    label: _(Idea for streets and sidewalks)
+    label: _(idea for streets and sidewalks)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -209,7 +209,7 @@ place_types:
           iconAnchor: [15, 15]
 
   health:
-    label: _(Health and Safety idea)
+    label: _(idea for health and safety)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -317,7 +317,7 @@ place:
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(See full list)
   show_map_button_label: _(Show the Map)
-  action_text: _(added)
+  action_text: _(suggested)
   title: _(Tell us more...)
   action_text: _(added)
   anonymous_name: _(Someone)
@@ -344,7 +344,7 @@ place:
           optional: false
         - name: idea-what
           type: textarea
-          prompt: _(What is your idea for how to improve our neighborhood?:)
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
           display_prompt: _( )
           placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
           optional: true
@@ -433,13 +433,87 @@ place:
           type: text
           prompt: _(Title of your idea:)
           display_prompt: _(Title:)
-          placeholder: _(Enter title...)
+          placeholder: _( )
           optional: false
-        - name: description
+        - name: idea-what
           type: textarea
-          prompt: "_(What's your question?)"
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
           display_prompt: _( )
-          placeholder: _(Enter question...)
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
+          optional: true
+        - name: idea-why
+          type: textarea
+          prompt: _(Why is this important? What need in the community does this serve?:)
+          display_prompt: _( )
+          placeholder: _( )
+          optional: true          
+        - name: private-phone
+          type: text
+          prompt: _(Your phone number:)
+          display_prompt: _()
+          placeholder: _(Your phone number will not appear on the map)
+          optional: true
+        - name: private-age
+          type: text
+          prompt: _(Your age:)
+          display_prompt: _()
+          placeholder: _(Your age will not appear on the map)
+          optional: true
+        - name: private-ethnicity
+          type: radio_big_buttons
+          annotation: _(Your ethnicity will not appear on the map)
+          prompt: _(Your ethnicity:)
+          display_prompt: _(Ethnicity:)
+          content:
+            - label: _(American Indian/Alaskan Native)
+              value: indian-alaskan
+            - label: _(Asian)
+              value: asian
+            - label: _(Black or African American)
+              value: black
+            - label: _(Hispanic or Latino/a)
+              value: hispanic
+            - label: _(Native Hawaiian or Pacific Islander)
+              value: hawaiian-pacific
+            - label: _(White)
+              value: white
+            - label: _(Other)
+              value: other
+          optional: true
+        - name: private-income
+          type: dropdown
+          prompt: _(Your income:)
+          annotation: _(Your income will not appear on the map)
+          content:
+            - label: _(Under $10,000)
+              value: under-10k
+            - label: _($10,000 - $14,999)
+              value: 10k-15k
+            - label: _($15,000 - $24,999)
+              value: 15k-25k
+            - label: _($25,000 - $34,999)
+              value: 25k-35k
+            - label: _($35,000 - $49,000)
+              value: 35k-49k
+            - label: _($50,000 - $74,999)
+              value: 50k-75k
+            - label: _($75,000 - $99,000)
+              value: 75k-99k
+            - label: _($100,000 - $149,000)
+              value: 100k-149k
+            - label: _($150,000 or more)
+              value: 150k-or-more
+          optional: true
+        - name: private-volunteer
+          type: binary_toggle
+          prompt: _(I want to volunteer:)
+          display_prompt: _(I want to volunteer:)
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
+          optional: true
     - category: parks
       includeOnForm: true
       name: location_type
@@ -451,15 +525,88 @@ place:
         - name: title
           type: text
           prompt: _(Title of your idea:)
-          placeholder: _(Enter title...)
           display_prompt: _(Title:)
+          placeholder: _( )
           optional: false
-        - name: description
+        - name: idea-what
           type: textarea
-          prompt: _(Describe your idea below:)
-          display_prompt: "_( )"
-          placeholder: _(Description...)
-          optional: false
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
+          display_prompt: _( )
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
+          optional: true
+        - name: idea-why
+          type: textarea
+          prompt: _(Why is this important? What need in the community does this serve?:)
+          display_prompt: _( )
+          placeholder: _( )
+          optional: true          
+        - name: private-phone
+          type: text
+          prompt: _(Your phone number:)
+          display_prompt: _()
+          placeholder: _(Your phone number will not appear on the map)
+          optional: true
+        - name: private-age
+          type: text
+          prompt: _(Your age:)
+          display_prompt: _()
+          placeholder: _(Your age will not appear on the map)
+          optional: true
+        - name: private-ethnicity
+          type: radio_big_buttons
+          annotation: _(Your ethnicity will not appear on the map)
+          prompt: _(Your ethnicity:)
+          display_prompt: _(Ethnicity:)
+          content:
+            - label: _(American Indian/Alaskan Native)
+              value: indian-alaskan
+            - label: _(Asian)
+              value: asian
+            - label: _(Black or African American)
+              value: black
+            - label: _(Hispanic or Latino/a)
+              value: hispanic
+            - label: _(Native Hawaiian or Pacific Islander)
+              value: hawaiian-pacific
+            - label: _(White)
+              value: white
+            - label: _(Other)
+              value: other
+          optional: true
+        - name: private-income
+          type: dropdown
+          prompt: _(Your income:)
+          annotation: _(Your income will not appear on the map)
+          content:
+            - label: _(Under $10,000)
+              value: under-10k
+            - label: _($10,000 - $14,999)
+              value: 10k-15k
+            - label: _($15,000 - $24,999)
+              value: 15k-25k
+            - label: _($25,000 - $34,999)
+              value: 25k-35k
+            - label: _($35,000 - $49,000)
+              value: 35k-49k
+            - label: _($50,000 - $74,999)
+              value: 50k-75k
+            - label: _($75,000 - $99,000)
+              value: 75k-99k
+            - label: _($100,000 - $149,000)
+              value: 100k-149k
+            - label: _($150,000 or more)
+              value: 150k-or-more
+          optional: true
+        - name: private-volunteer
+          type: binary_toggle
+          prompt: _(I want to volunteer:)
+          display_prompt: _(I want to volunteer:)
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
+          optional: true
     - category: streets
       includeOnForm: true
       name: location_type
@@ -471,15 +618,88 @@ place:
         - name: title
           type: text
           prompt: _(Title of your idea:)
-          placeholder: _(Enter title...)
           display_prompt: _(Title:)
+          placeholder: _( )
           optional: false
-        - name: description
+        - name: idea-what
           type: textarea
-          prompt: "_(What's your complaint?)"
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
           display_prompt: _( )
-          placeholder: _(Description...)
-          optional: false
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
+          optional: true
+        - name: idea-why
+          type: textarea
+          prompt: _(Why is this important? What need in the community does this serve?:)
+          display_prompt: _( )
+          placeholder: _( )
+          optional: true          
+        - name: private-phone
+          type: text
+          prompt: _(Your phone number:)
+          display_prompt: _()
+          placeholder: _(Your phone number will not appear on the map)
+          optional: true
+        - name: private-age
+          type: text
+          prompt: _(Your age:)
+          display_prompt: _()
+          placeholder: _(Your age will not appear on the map)
+          optional: true
+        - name: private-ethnicity
+          type: radio_big_buttons
+          annotation: _(Your ethnicity will not appear on the map)
+          prompt: _(Your ethnicity:)
+          display_prompt: _(Ethnicity:)
+          content:
+            - label: _(American Indian/Alaskan Native)
+              value: indian-alaskan
+            - label: _(Asian)
+              value: asian
+            - label: _(Black or African American)
+              value: black
+            - label: _(Hispanic or Latino/a)
+              value: hispanic
+            - label: _(Native Hawaiian or Pacific Islander)
+              value: hawaiian-pacific
+            - label: _(White)
+              value: white
+            - label: _(Other)
+              value: other
+          optional: true
+        - name: private-income
+          type: dropdown
+          prompt: _(Your income:)
+          annotation: _(Your income will not appear on the map)
+          content:
+            - label: _(Under $10,000)
+              value: under-10k
+            - label: _($10,000 - $14,999)
+              value: 10k-15k
+            - label: _($15,000 - $24,999)
+              value: 15k-25k
+            - label: _($25,000 - $34,999)
+              value: 25k-35k
+            - label: _($35,000 - $49,000)
+              value: 35k-49k
+            - label: _($50,000 - $74,999)
+              value: 50k-75k
+            - label: _($75,000 - $99,000)
+              value: 75k-99k
+            - label: _($100,000 - $149,000)
+              value: 100k-149k
+            - label: _($150,000 or more)
+              value: 150k-or-more
+          optional: true
+        - name: private-volunteer
+          type: binary_toggle
+          prompt: _(I want to volunteer:)
+          display_prompt: _(I want to volunteer:)
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
+          optional: true
     - category: health
       includeOnForm: true
       name: location_type
@@ -491,15 +711,88 @@ place:
         - name: title
           type: text
           prompt: _(Title of your idea:)
-          placeholder: _(Enter title...)
           display_prompt: _(Title:)
+          placeholder: _( )
           optional: false
-        - name: description
+        - name: idea-what
           type: textarea
-          prompt: "_(What's your complaint?)"
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
           display_prompt: _( )
-          placeholder: _(Description...)
-          optional: false
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
+          optional: true
+        - name: idea-why
+          type: textarea
+          prompt: _(Why is this important? What need in the community does this serve?:)
+          display_prompt: _( )
+          placeholder: _( )
+          optional: true          
+        - name: private-phone
+          type: text
+          prompt: _(Your phone number:)
+          display_prompt: _()
+          placeholder: _(Your phone number will not appear on the map)
+          optional: true
+        - name: private-age
+          type: text
+          prompt: _(Your age:)
+          display_prompt: _()
+          placeholder: _(Your age will not appear on the map)
+          optional: true
+        - name: private-ethnicity
+          type: radio_big_buttons
+          annotation: _(Your ethnicity will not appear on the map)
+          prompt: _(Your ethnicity:)
+          display_prompt: _(Ethnicity:)
+          content:
+            - label: _(American Indian/Alaskan Native)
+              value: indian-alaskan
+            - label: _(Asian)
+              value: asian
+            - label: _(Black or African American)
+              value: black
+            - label: _(Hispanic or Latino/a)
+              value: hispanic
+            - label: _(Native Hawaiian or Pacific Islander)
+              value: hawaiian-pacific
+            - label: _(White)
+              value: white
+            - label: _(Other)
+              value: other
+          optional: true
+        - name: private-income
+          type: dropdown
+          prompt: _(Your income:)
+          annotation: _(Your income will not appear on the map)
+          content:
+            - label: _(Under $10,000)
+              value: under-10k
+            - label: _($10,000 - $14,999)
+              value: 10k-15k
+            - label: _($15,000 - $24,999)
+              value: 15k-25k
+            - label: _($25,000 - $34,999)
+              value: 25k-35k
+            - label: _($35,000 - $49,000)
+              value: 35k-49k
+            - label: _($50,000 - $74,999)
+              value: 50k-75k
+            - label: _($75,000 - $99,000)
+              value: 75k-99k
+            - label: _($100,000 - $149,000)
+              value: 100k-149k
+            - label: _($150,000 or more)
+              value: 150k-or-more
+          optional: true
+        - name: private-volunteer
+          type: binary_toggle
+          prompt: _(I want to volunteer:)
+          display_prompt: _(I want to volunteer:)
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
+          optional: true
   # define form elements that appear on every form here
   common_form_elements:
     - name: submitter_name
