--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -49,7 +49,7 @@ map:
 
   layers:
     - id: osm
-      url: http://{s}.osm.maptiles.xyz/{z}/{x}/{y}.png
+      url: http://{s}.tiles.wmflabs.org/hikebike/{z}/{x}/{y}.png
       attribution: '<a href="/page/terms">Terms and conditions</a> &copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Mapbox</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
     - id: satellite
@@ -807,7 +807,7 @@ place:
       sticky: true
       attrs:
         - key: placeholder
-          value: _(Receive email updates on your report)
+          value: _(Receive email updates on your idea)
         - key: size
           value: 30
     - name: my_image
