Add form autocompletion
Note that this commit replicates functionality implemented on the
formAutocompletion-534 branch (based off of develop), but tweaked
to work with pboakland's code, which is based off of master.

--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -802,13 +802,9 @@ place:
     - name: private-submitter_email
       type: text
       prompt: _(Your Email)
+      placeholder: _(Receive email updates on your idea)
       optional: true
       sticky: true
-      attrs:
-        - key: placeholder
-          value: _(Receive email updates on your idea)
-        - key: size
-          value: 30
     - name: my_image
       type: file
       prompt: _(Image)
