Enable emails and refactor settings with django-dotenv

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ httpagentparser
 # Config
 pyyaml
 django-extensions
+django-dotenv
 
 
 #=============================================================#
