--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -147,6 +147,14 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-health.png
 
+  housing:
+    label: _(idea for health and safety)
+    zoomType: markerZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-housing.png
+
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
@@ -211,6 +219,9 @@ sidebar:
         - title: _(Health and safety)
           image: /static/css/images/markers/marker-health.png
           url: /filter/complaint
+        - title: _(Housing and Jobs)
+          image: /static/css/images/markers/marker-health.png
+          url: /filter/complaint          
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
   enabled: true
@@ -364,7 +375,32 @@ place:
           display_prompt: _( )
           placeholder: _( )
           optional: true          
-
+    - category: housing
+      includeOnForm: true
+      name: location_type
+      dataset: pboakland
+      icon_url: /static/css/images/markers/marker-housing.png
+      value: housing
+      label: _(Housing and Jobs)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your idea:)
+          display_prompt: _(Title:)
+          placeholder: _( )
+          optional: false
+        - name: idea-what
+          type: textarea
+          prompt: _(Tell us more about your idea to improve our neighborhood?:)
+          display_prompt: _( )
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
+          optional: true
+        - name: idea-why
+          type: textarea
+          prompt: _(Why is this important? What need in the community does this serve?:)
+          display_prompt: _( )
+          placeholder: _( )
+          optional: true
   # define form elements that appear on every form here
   common_form_elements:
     - name: my_image
