--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -239,7 +239,7 @@ place:
   title: _(Tell us more...)
   action_text: _(suggested)
   anonymous_name: _(Someone)
-  submit_button_label: _(Put it on the map!)
+  submit_button_label: _(Submit)
 
   location_item_name: location
 
