--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -107,20 +107,12 @@ place_types:
         iconAnchor: [25, 60]
 
   youth:
-    label: _(idea for youth services)
+    label: _(idea for community programs and services)
     zoomType: markerZoomStyle
     rules:
       - condition: 'true'
         icon:
           iconUrl: /static/css/images/markers/marker-youth.png
-
-  senior:
-    label: _(idea for senior services)
-    zoomType: markerZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-seniors.png
 
   parks:
     label: _(idea for parks and recreation)
@@ -138,16 +130,8 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-streets.png
 
-  health:
-    label: _(idea for health and safety)
-    zoomType: markerZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-health.png
-
   housing:
-    label: _(idea for health and safety)
+    label: _(idea for housing and jobs)
     zoomType: markerZoomStyle
     rules:
       - condition: 'true'
@@ -203,23 +187,17 @@ sidebar:
       view: LegendView
       icon: info-circle
       items:
-        - title: _(Youth services)
+        - title: _(Community Programs and Services)
           image: /static/css/images/markers/marker-youth.png
           url: /filter/observation
-        - title: _(Senior services)
-          image: /static/css/images/markers/marker-seniors.png
-          url: /filter/question
         - title: _(Parks and recreation)
           image: /static/css/images/markers/marker-parks.png
           url: /filter/idea
         - title: _(Streets and sidewalks)
           image: /static/css/images/markers/marker-streets.png
           url: /filter/complaint
-        - title: _(Health and safety)
-          image: /static/css/images/markers/marker-health.png
-          url: /filter/complaint
         - title: _(Housing and Jobs)
-          image: /static/css/images/markers/marker-health.png
+          image: /static/css/images/markers/marker-housing.png
           url: /filter/complaint          
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -251,32 +229,6 @@ place:
       icon_url: /static/css/images/markers/marker-youth.png
       value: youth
       label: _(Youth Services)
-      fields:
-        - name: title
-          type: text
-          prompt: _(Title of your idea:)
-          display_prompt: _(Title:)
-          placeholder: _( )
-          optional: false
-        - name: idea-what
-          type: textarea
-          prompt: _(Tell us more about your idea to improve our neighborhood?:)
-          display_prompt: _( )
-          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
-          optional: true
-        - name: idea-why
-          type: textarea
-          prompt: _(Why is this important? What need in the community does this serve?:)
-          display_prompt: _( )
-          placeholder: _( )
-          optional: true
-    - category: senior
-      includeOnForm: true
-      name: location_type
-      dataset: pboakland
-      icon_url: /static/css/images/markers/marker-seniors.png
-      value: senior
-      label: _(Senior Services)
       fields:
         - name: title
           type: text
@@ -347,33 +299,7 @@ place:
           prompt: _(Why is this important? What need in the community does this serve?:)
           display_prompt: _( )
           placeholder: _( )
-          optional: true
-    - category: health
-      includeOnForm: true
-      name: location_type
-      dataset: pboakland
-      icon_url: /static/css/images/markers/marker-health.png
-      value: health
-      label: _(Health and Safety)
-      fields:
-        - name: title
-          type: text
-          prompt: _(Title of your idea:)
-          display_prompt: _(Title:)
-          placeholder: _( )
-          optional: false
-        - name: idea-what
-          type: textarea
-          prompt: _(Tell us more about your idea to improve our neighborhood?:)
-          display_prompt: _( )
-          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
-          optional: true
-        - name: idea-why
-          type: textarea
-          prompt: _(Why is this important? What need in the community does this serve?:)
-          display_prompt: _( )
-          placeholder: _( )
-          optional: true          
+          optional: true    
     - category: housing
       includeOnForm: true
       name: location_type
