split dirt corps layer + story error

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -75,6 +75,11 @@ map:
       type: landmark
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+
+    - id: dirt-corps
+      type: landmark
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks      
+      sources: 
         - "http://a.tiles.mapbox.com/v4/smartercleanup.1pbl473a/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: story-markers
@@ -582,6 +587,10 @@ sidebar:
             - id: cleanup
               title: _(River Cleanup Plan)
               visibleDefault: false
+
+            - id: dirt-corps
+              title: _(Dirt Corps sites)
+              visibleDefault: true
 
             - id: story-markers
               title: _(Stories)
@@ -1185,6 +1194,10 @@ story:
       - restoration
     order:
       - url: dirtcorps
+        zoom: 15
+        panTo:
+          Lat: 47.53420
+          Lng: -122.32165
         spotlight: false
       - url: south-orcas-rain-gardens
       - url: rose-greenstreet
