--- a/docker-data-container/Dockerfile
+++ b/docker-data-container/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get install -y postgresql libpq-dev
 # RUN npm install npm -g
 
 # Deploy from our git repository
-RUN git clone https://github.com/smartercleanup/platform.git && cd platform && git checkout master && cd -
+RUN git clone https://github.com/smartercleanup/platform.git && cd platform && git checkout 0.7.3 && cd -
 
 # # cd in project root and uncomment this for local testing:
 # ADD . /platform
