--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ environment-vars.txt
 src/sa_web/static/build/
 src/sa_web/static/dist/
 staticfiles
+src/sa_web/static/css/default.css*
 
 # environment
 env/
